# notes-service

./: .gitignore  CMakeLists.txt  docker-compose.yml  vcpkg.json
api-service/: CMakeLists.txt  CMakePresets.json  Dockerfile
api-service/cmake/: Findlibrdkafka.cmake
api-service/include/: note_controller.h
api-service/src/: main.cpp  note_controller.cpp  note_controller.h  pch.hpp
auth-service/: CMakeLists.txt
auth-service/include/: auth_controller.hpp
auth-service/migrations/: liquibase.properties
auth-service/migrations/db/: db.changelog-master.xml
auth-service/migrations/db/changelog/: 001_initial_db.sql
auth-service/src/: auth_controller.cpp  main.cpp
common/: CMakeLists.txt
common/template-parser/: CMakeLists.txt
common/template-parser/include/: Concepts.hpp  ParseError.hpp  ParserType.hpp  Requirements.hpp  TemplateParser.hpp  ToJson.hpp
common/utils/: CMakeLists.txt
common/utils/include/: BaseController.hpp  JwtAuthFilter.hpp  Utils.hpp
config/: CMakeLists.txt  auth-service-drogon-db-config.json.in  config.hpp.in  drogon-config.json.in  note-service-drogon-db-config.json.in
note-processor/: CMakeLists.txt  Dockerfile  clickhouse-users.xml
note-processor/cmake/: Findclickhouse.cmake  Findlibrdkafka.cmake
note-processor/migrations/db/changelog/: 001_create_notes_table.sql  002_add_tags_column.sql  003_add_status_column.sql  db.changelog-master.xml
note-processor/src/: main.cpp
note-service/: CMakeLists.txt
note-service/include/: note_controller.h
note-service/migrations/: liquibase.properties
note-service/migrations/db/changelog/: 001_create_notes_table.sql
note-service/src/: main.cpp  note_controller.cpp  pch.hpp
